CSS/style.css
.app-links {
	font-size: 24px;
}
body {
	background-color: #F6F6F6;
}
body > div.navbar.transparent.navbar-inverse.navbar-fixed-top {
	opacity: 1;
}
body > header > div > h2 {
	color: #39273D;
}
body, .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
	font-family: "Oxygen", Helvetica, Arial, sans-serif;
}
.btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn.active.focus, a:focus, h3:focus {
	outline: none;
}
dd {
	font-size: 85%;
}
#desktop-title-apex {
	margin-left: 8%;
	max-width: 28%;
}
#desktop-title-apex, #desktop-title-theatres {
	opacity: .8;
}
#desktop-title-theatres {
	margin-right: 38%;
	max-width: 25.4%;
}
div.panel-body {
	padding-top: 6px;
	padding-bottom: 6px;
}
div.panel.panel-default {
	padding: 0;
}
div.slick-slide:not(.slick-center) {
	opacity: .7;
}
dt, dd {
	text-align: center;
}
.form-control {
	display: inline;
}
header {
	margin-top: -10px;
}
#hrtop {
	margin-top: 0px;
}
i {
	padding-right: 10px
}
#info-buttons {
	position: absolute;
	right: 0;
	bottom: 2%;
	font-family: "Oxygen", Helvetica, Arial, sans-serif;
}
.info-modal-body {
	padding-top: 0;
}
.info-modal-body h3 {
	font-weight: 700;
}
.info-modal-body h3 small {
	font-size: 80%;
}
.main-header {
	padding-bottom: 0px;
	background: linear-gradient(180deg, #f6f6f6, transparent 600%), linear-gradient(270deg, #f6f6f6, transparent 20%), #f6f6f6 url("../images/searchlights.svg") no-repeat right;
	background-size: auto;
}
.main-header div > h2 {
	text-align: center;
}
.media-left a img {
	width: auto;
	height: 180px;
}
.media:first-child {
	margin-top: 15px;
}
.nav li a {
	color: #33312A;
	font-size: 1.3em;
	letter-spacing: 1.1px;
}
.navbar-brand {
	padding: 7px 0 7px 14%;
}
.navbar-logo {
	max-height: 46px;
	display: inline;
	color: #f8f8f8;
}
.navbar-logo:nth-child(2) {
	float: right;
	padding-left: 15px;
}
.navbar-logo:nth-child(1) {
	float: left;
}
.navbar-toggle {
	margin-top: 4px;
	margin-bottom: 4px;
}
.row.slick-slide.slick-active::after {
	content: "Showtimes and Pricing";
	text-align: center;
	font-weight: 200;
	font-size: 4em;
	color: #171717;
	text-shadow: 1px 1px #f6f6f6, 3px 3px rgba(0, 0, 0, .18);
	margin: 15px auto 0px;
}
.shadowed-page-header {
	border-bottom: none;
	margin: 34px 0 34px;
}
.shadowed-page-header h1 {
	text-align: center;
	font-weight: 200;
	font-size: 4em;
	color: #171717;
	text-shadow: 1px 1px #f6f6f6, 3px 3px rgba(0, 0, 0, .18);
	margin: 0 auto 12px;
}
.slick-container {
	z-index: 1;
	border-top: 4px black dotted;
	border-bottom: 4px black dotted;
	padding-left: 0;
	padding-right: 0;
}
.slick-film-border {
	border-top: 4px black solid;
	border-bottom: 4px black solid;
	padding-left: 0;
	padding-right: 0;
}
.slick-next {
	right: -5px;
}
.slick-next:before {
	content: "\f054";
}
.slick-next, .slick-prev {
	position: absolute;
	width: inherit;
	height: inherit;
}
.slick-prev {
	left: -5px;
}
.slick-prev:before {
	content: "\f053";
}
.slick-prev:before, .slick-next:before {
	color: #222;
	font-family: FontAwesome;
	font-size: 100px;
	line-height: 1;
	color: rgba(0, 0, 0, .5);
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}
.slider-desc .panel-body {
	padding: auto 4px;
}
.slider-desc div > h4 {
	font-weight: 600;
}
.slider-desc div h4 > small {
	font-weight: 200;
	letter-spacing: .72px;
	color: #4c4c4c;
	font-size: 88%;
}
.slider-for {
	margin-top: 20px;
}
.slider-img-thumb {
	background: linear-gradient(0deg, rgba(0, 0, 0, .65), rgba(0, 0, 0, .10) 30%);
	background-position: center center;
	background-repeat: no-repeat;
	border-radius: 4px;
	transition: background 2s, transform 2s;
}
.slider-img-thumb:hover {
	background: linear-gradient(0deg, rgba(0, 0, 0, .65), rgba(0, 0, 0, .10) 30%), rgba(0, 0, 0, 0.55);
}
.slider-img-thumb a h2 {
	font-size: 32px;
	transition: font-size .4s;
	margin-bottom: 0;
}
.slider-img-thumb a h2:hover {
	font-size: 34px;
}
.slider-nav {
	background-color: black;
	border-top: 4px black solid;
	border-bottom: 4px black solid;
}
.slider-nav.slick-slider {
	margin-bottom: 0;
}
.slider-nav div div .slick-slide img {
	height: 100%;
	width: auto;
	border-right: 4px black solid;
}
.slider-thumbnail {
	position: relative;
	width: 100%;
	height: auto;
	display: block;
	z-index: -1;
}
.slider-trailer {
	position: absolute;
	bottom: 1%;
	right: 5%;
}
.slider-trailer h2 {
	color: white;
	letter-spacing: -1px;
}
.slider-trailer .glyphicon {
	padding-left: 2px;
}
.social-links {
	font-size: 16px;
}
.tab {
	text-indent: 20px;
}
#tabs h3 > small {
	padding-left: 10px;
}
.text-dark-grey {
	color: #343434;
}
.text-muted {
	line-height: 1.5;
}
.ui-widget-content {
	border-color: #ddd;
	border-style: solid;
	border-width: 1px;
	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
	box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
}
.ui-widget-header {
	border-top: 0;
	border-right: 0;
	border-left: 0;
	border-bottom-width: 3px;
	border-bottom-right-radius: none;
	border-bottom-left-radius: none;
	background: none;
}
#v8-showtimes div h3 small {
	padding-bottom: 40px;
}
#v8-showtimes div h3 small::after {
	content: " ";
	display: table;
	clear: both;
}
#v8-showtimes h3, #ba-showtimes h3 {
	margin: 0 auto;
}

/*//////////MEDIAQ//////////*/

@media (min-width:60px) {
	.navbar-brand {
		padding-left: 2%;
	}
	#v8-showtimes div h3 small::after {
		content: "";
		display: table;
		clear: both;
	}
	.ui-accordion .ui-accordion-content {
		padding-bottom: 0
	}
	.navbar-header {
		height: 60px
	}
	.form-control {
		width: 75%
	}
	button[type=submit] {
    margin-left: 0;
    margin-top:  5px
	}
}

@media (min-width:366px) {
	.navbar-toggle {
		margin-top: 13px;
		margin-bottom: 13px;
	}
	.panel-title {
		font-size: 1.5em;
	}
	.navbar-inverse {
		background-image: -webkit-linear-gradient(top, #666 0, #4c4c4c 100%);
		background-image: -o-linear-gradient(top, #666 0, #4c4c4c 100%);
		background-image: -webkit-gradient(linear, left top, left bottom, from(#666), to(#4c4c4c));
		background-image: linear-gradient(to bottom, #666 0, #4c4c4c 100%);
	}
	.slider-desc.panel {
		height: 100%;
	}
	.slider-img-thumb a h2 {
		font-size: 24px;
	}
	.slider-img-thumb a h2:hover {
		font-size: 26px;
	}
	.ui-accordion .ui-accordion-content {
		padding-bottom: 0;
	}
	button[type=submit] {
    margin-left: 5px;
    margin-top: -3px;
	}
}

@media (min-width:700px) {
	#v8-showtimes div h3 small::after {
		content: none;
		display: inherit;
		clear: none;
	}
	.ui-accordion .ui-accordion-content {
		padding-bottom: 21px;
	}
	.form-control {
		width: 48%
	}
}

@media (min-width:768px) {
	div.slider-nav > div > .slick-track {
		height: 180px;
	}
	.navbar-header {
		height: 40px;
	}
	.main-header div > h2 {
		font-size: 26px;
	}
	.slider-desc.panel {
		height: auto;
	}
	.slider-desc div > h4 {
		font-size: 17px;
		margin-top: 4px;
		margin-bottom: 4px;
	}
	.slider-img {
		width: 84%;
		margin: 0 auto 20px;
		padding-left: 0px;
		border: 1px solid transparent;
		border-radius: 4px;
		box-shadow: 0 1px 2px rgba(0, 0, 0, .05)
	}
	div.panel-body {
		padding: 8px 12px;
	}
	.slick-prev:before, .slick-next:before {
		display: none;
	}
	.navbar-inverse {
		background-image: -webkit-linear-gradient(top, #3c3c3c 0, #222 100%);
		background-image: -o-linear-gradient(top, #3c3c3c 0, #222 100%);
		background-image: -webkit-gradient(linear, left top, left bottom, from(#3c3c3c), to(#222));
		background-image: linear-gradient(to bottom, #3c3c3c 0, #222 100%);
	}
	.slider-img-thumb a h2 {
		font-size: 32px;
	}
	.slider-img-thumb a h2:hover {
		font-size: 34px;
	}
	#info-buttons {
		left: 88%;
	}
}

@media (min-width:992px) {
	div.slider-nav > div > .slick-track {
		height: 244px;
	}
	.main-header div > h2 {
		font-size: 30px;
	}
	.slider-desc.panel {
		height: 271px;
	}
	.slider-desc div > h4 {
		font-size: 15.5px;
		margin-top: 7px;
		margin-bottom: 7px;
	}
	.slider-desc {
		width: 480px;
		margin-left: 5px;
	}
	.slider-img {
		padding-right: 0;
		width: 480px;
		margin-right: 5px;
	}
	div.panel-body {
		padding-left: 7px;
		padding-right: 7px;
	}
	#info-buttons {
		left: 81%;
	}
}

@media (min-width:1200px) {
	div.slider-nav > div > .slick-track {
		height: 304px;
	}
	.slick-slide img {
		border-right-width: 6px;
	}
	.slider-desc.panel {
		height: 326px;
	}
	.slider-desc div > h4 {
		font-size: 18px;
		margin-top: 9px;
		margin-bottom: 9px;
	}
	.slider-desc {
		width: 578px;
		margin-left: 6px;
	}
	.slider-img {
		width: 578px;
		margin-right: 6px;
	}
	#info-buttons {
		left: 84%;
	}
}

